# lerobot-agent-console

./: .Dockerfile.swp  .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-entrypoint.sh  pyproject.toml  requirements.txt  server.py
k8s/: README.md  caddy-config.yaml  caddy-pvc.yaml  deployment.yaml  ingress-alb.yaml  pvc.yaml  secret.example.yaml  service-lb.yaml  service.yaml
k8s/livekit/: configmap.yaml  deployment.yaml  service-clb.yaml
scripts/: deploy-livekit.sh  install_skill.sh  patch_acp_autosave.py  patch_acp_interrupt.py  patch_acp_logging.py
static/: app.js  index.html  release_note.md  style.css
